nav y hero banner header

--- a/css/prettyPhoto.css
+++ b/css/prettyPhoto.css
@@ -918,9 +918,9 @@ div.ppt {
 }
 
 .portfolio-categ li.active {
-    background:#36b1af;
+    background:#5482AB;
     color: #fff;
-    border: 1px solid #36b1af;
+    border: 1px solid #5482AB;
 }
 
 .portfolio-categ li.active a {
