--- a/css/contact.css
+++ b/css/contact.css
@@ -13,7 +13,7 @@ body a {
 }
 .address-grid i {
     font-size: 1.7em;
-    color: #36b1af;
+    color: #5482AB;
 }
 .contact_grid_right {
     width: 100%;
@@ -67,7 +67,7 @@ p.sub {
 }
 
 .contact_grid_right input[type="submit"]:hover {
-    background:#36b1af;
+    background:#5482AB;
 }
 
 .contact-left h4 {
