--- a/css/owl.theme.css
+++ b/css/owl.theme.css
@@ -58,5 +58,5 @@
 
 .owl-theme .owl-dots .owl-dot.active span,
 .owl-theme .owl-dots .owl-dot:hover span {
-    background: #36b1af;
+    background: #5482AB;
 }
