--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ a.navbar-b li.nav-item {
 .navbar-light .navbar-nav .nav-link:hover,
 .navbar-light .navbar-nav .nav-link:focus {
     background: transparent;
-    color: #36b1af;
+    color: #5482AB;
 }
 
 .dropdown-item {
@@ -187,7 +187,7 @@ li.nav-item.active {
 
 .dropdown-item:hover,
 .dropdown-item:focus {
-    color: #36b1af;
+    color: #5482AB;
     text-decoration: none;
     background-color: transparent;
 }
@@ -201,14 +201,14 @@ nav.navbar.second {
 
 a.nav-item.nav-link.sec {
     padding: 0.3em 1.2em;
-    color: #36b1af;
+    color: #5482AB;
     font-size: 0.9em;
     letter-spacing: 1px;
     font-weight: 600 !important;
 }
 
 a.nav-item.nav-link.sec:hover {
-    color: #36b1af;
+    color: #5482AB;
 }
 
 a.pagescrolldisplay {
@@ -278,7 +278,7 @@ nav.navbar.shrink .navbar-toggler {
 /*--/banner-content--*/
 
 .mian-content {
-    background: url(../images/bg.jpg);
+    background: url(../images/airport-business-cabinets-236093.jpg);
     position: relative;
     background-size: cover;
     height: 100%;
@@ -293,7 +293,7 @@ nav.navbar.shrink .navbar-toggler {
     padding-top: 18em;
 }
 .ban-text {
-    background: #36b1af;
+    background: #5482AB;
 }
 .banner-content h4 {
     font-size: 1em;
@@ -337,7 +337,7 @@ nav.navbar.shrink .navbar-toggler {
 .bg-gd:hover i,
 .bg-gd.active i {
     color: #fff;
-    background: #36b1af;
+    background: #5482AB;
 }
 
 .rotate {
@@ -461,7 +461,7 @@ h3.main mark {
 
 .about-in .card i {
     font-size: 2em;
-    color: #36b1af;
+    color: #5482AB;
 }
 .about-in:hover .card i {
     color: #ef9632;
@@ -478,7 +478,7 @@ h3.main mark {
 h4.sub-tittle {
     margin: 1.2em 0 0 0;
     font-size: 15px;
-    color: #36b1af;
+    color: #5482AB;
     text-transform: uppercase;
 }
 
@@ -551,7 +551,7 @@ h3.tittle {
 
 .about-in.middle-grid-info:hover .card,
 .about-in.middle-grid-info.active .card {
-    border-bottom: 4px solid #36b1af;
+    border-bottom: 4px solid #5482AB;
 }
 /*-- //services--*/
 .advantage_left h4 {
@@ -559,7 +559,7 @@ h3.tittle {
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #36b1af;
+    color: #5482AB;
 }
 .advantage_left1 img {
     width: 300px;
@@ -603,7 +603,7 @@ h3.tittle {
 .choose_top a {
     font-size: 16px;
     padding: 8px 30px;
-    background: #36b1af;
+    background: #5482AB;
     outline: none;
     border: none;
     display: inline-block;
@@ -628,7 +628,7 @@ h3.tittle {
     font-size: 2.5em;
     letter-spacing: 1px;
     line-height: 2;
-    color: #36b1af;
+    color: #5482AB;
     font-weight: 800;
 }
 .stats_info h4 {
@@ -715,7 +715,7 @@ h3.tittle {
 }
 
 .view-caption {
-    background-color: #36b1af;
+    background-color: #5482AB;
     bottom: 0;
     height: 20%;
     left: 0;
@@ -866,7 +866,7 @@ section.bottom-last h3 {
 }
 
 .feedback-img-info h5 {
-    color:#36b1af;
+    color:#5482AB;
     font-size: 1em;
     letter-spacing: 1px;
     font-weight: 700;
@@ -927,7 +927,7 @@ section.bottom-last h3 {
 }
 
 .login button.btn.btn-primary.submit:hover {
-    background: #36b1af;
+    background: #5482AB;
 }
 
 .login a {
@@ -971,7 +971,7 @@ li.breadcrumb-item {
 }
 
 li.breadcrumb-item a {
-    color: #36b1af;
+    color: #5482AB;
 }
 
 .breadcrumb-item.active {
@@ -1015,12 +1015,12 @@ ul.links-nav li a:hover {
 }
 
 p.copy-right a {
-    color: #36b1af;
+    color: #5482AB;
 }
 
 .n-right .form-group input.form-control.submit {
-    background: #36b1af;
-    border: 1px solid #36b1af !important;
+    background: #5482AB;
+    border: 1px solid #5482AB !important;
     color: #fff;
     font-size: 1em;
     font-weight: 500;
@@ -1068,7 +1068,7 @@ ul.social-icons li a {
 }
 
 ul.social-icons li a:hover {
-    color: #36b1af;
+    color: #5482AB;
 }
 
 .copyright a.navbar-brand {
