imagenes de paralax y ventajas

--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ h3.tittle {
 }
 /*-- choose --*/
 .choose{
-	background: url(../images/bg1.jpg) no-repeat;
+	background: url(../images/abstract-architectural-design-architecture-316093.jpg) no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -614,13 +614,14 @@ h3.tittle {
 }
 /*-- //choose --*/
 .clients{
-	background: url(../images/bg2.jpg) no-repeat;
+	background: url(../images/architecture-business-cabinet-325229.jpg) no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
     background-attachment: fixed;
+    background-position: center;
 }
 /*-- stats --*/
 
