pagina de contacto

--- a/css/style.css
+++ b/css/style.css
@@ -416,7 +416,7 @@ nav.navbar.shrink .navbar-toggler {
 
 /*-- /banner-info --*/
 .mian-content-1 {
-    background: url(../images/bg.jpg);
+    background: url(../images/ibm-data-center.png);
     background-size: cover;
     background-position: center;
    min-height:300px;
