--- a/css/style.css
+++ b/css/style.css
@@ -1675,7 +1675,19 @@ ul.scial {
 
 /*--//responsive--*/
 
-#logos .client-logo img {
+#logos .clientes-sm img {
   max-height: 125px;
   max-width: 125px;
+}
+
+#logos .clientes-lg img {
+  max-height: 225px;
+  max-width: 225px;
+  text-align: center;
+}
+
+@media (max-width: 991px) {
+  #logos .clientes-sm img {
+    display: none;
+  }
 }
