--- a/css/infraestructura.css
+++ b/css/infraestructura.css
@@ -34,6 +34,54 @@
   letter-spacing: 1px;
 }
 
+.infr-text,
 .pers-computing-p {
   text-indent: 2em;
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .column-to-row {
+    flex-direction: row;
+  }
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)
+  ##Screen = B/w 768px to 1024px
+*/
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+  /* //CSS */
+  .column-to-row {
+    flex-direction: column;
+  }
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+  ##Screen = B/w 481px to 767px
+*/
+
+@media (min-width: 481px) and (max-width: 767px) {
+  /* //CSS */
+  .column-to-row {
+    flex-direction: row;
+  }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+
+@media (min-width: 320px) and (max-width: 480px) {
+  /* //CSS */
+  .column-to-row {
+    flex-direction: row;
+  }
 }
