--- a/css/infraestructura.css
+++ b/css/infraestructura.css
@@ -39,6 +39,10 @@
   text-indent: 2em;
 }
 
+.column-to-row {
+  flex-direction: column;
+}
+
 /* 
   ##Device = Tablets, Ipads (portrait)
   ##Screen = B/w 768px to 1024px
