servicios mobile y hero banner

--- a/css/servicios.css
+++ b/css/servicios.css
@@ -10,3 +10,9 @@
 .card-body .details-button:hover {
   background: #ef9632;
 }
+.mian-content-1 {
+  background: url(https://lh3.googleusercontent.com/kLP82SB-qcdCVc6C1gcJSVgSMlukYdYVFxb0-yCagjOqcNDuKXT_j764XeXfXYeLDw7brU9HETbrpb9CzM1OafhHiBSi2s3A7D8yslYwKHgedySIkyJ4l5FtzIZbaCPhRg86n43uGgY=w2400);
+  background-size: cover;
+  background-position: center;
+  min-height: 350px;
+}
