--- a/css/instalaciones.css
+++ b/css/instalaciones.css
@@ -5,3 +5,16 @@
   line-height: 2em;
   letter-spacing: 1px;
 }
+
+.mian-content-1 {
+  background: url(https://lh3.googleusercontent.com/kLP82SB-qcdCVc6C1gcJSVgSMlukYdYVFxb0-yCagjOqcNDuKXT_j764XeXfXYeLDw7brU9HETbrpb9CzM1OafhHiBSi2s3A7D8yslYwKHgedySIkyJ4l5FtzIZbaCPhRg86n43uGgY=w2400);
+  background-size: cover;
+  background-position: center;
+  min-height: 300px;
+}
+
+@media (max-width: 384px) {
+  .mian-content-1 {
+    min-height: 160px;
+  }
+}
