--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@
   background: url(https://lh3.googleusercontent.com/kLP82SB-qcdCVc6C1gcJSVgSMlukYdYVFxb0-yCagjOqcNDuKXT_j764XeXfXYeLDw7brU9HETbrpb9CzM1OafhHiBSi2s3A7D8yslYwKHgedySIkyJ4l5FtzIZbaCPhRg86n43uGgY=w2400);
   background-size: cover;
   background-position: center;
-  min-height: 350px;
+  min-height: 300px;
 }
 
 .about-sobre-nosotros {
@@ -27,4 +27,10 @@
 
 .about-img-rad {
   border-radius: 15px;
+}
+
+@media (max-width: 384px) {
+  .mian-content-1 {
+    min-height: 160px;
+  }
 }
