--- a/css/servicios.css
+++ b/css/servicios.css
@@ -16,3 +16,9 @@
   background-position: center;
   min-height: 300px;
 }
+
+@media (max-width: 384px) {
+  .mian-content-1 {
+    min-height: 160px;
+  }
+}
