--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,12 @@ h1 a.navbar-brand {
 
 /*--logo--*/
 
+#genesys-logo {
+  background-color: black;
+  border-radius: 10px;
+  padding: 5px;
+}
+
 a.navbar-b li.nav-item {
   margin: 0 1px;
 }
